css/style.css
#bar {
    background-color: #E2E1DF;
}

body {
    background-image: url("../img-logo/background-flatter.png");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100% 100%;
    padding: 0;
    margin: 0;
}

h1 {
    font-family: Montserrat;
    font-size: 45px;
    color: #fff;

}

h2 {
    font-family: Montserrat;
    font-size: 35px;
    

}

h3 {
    font-family: Montserrat;
    font-size: 25px;
    
    margin-top: 50px;
    margin-bottom: 100px;
    line-height: 45px;

}

p {
    font-family: Domine;
    font-size: 15px;
    display: center;
    

}

.rightText {
    margin-bottom: 100px;
    line-height: 45px;
    

}


.cinemaLateral{
    width: 40%; 
    height: 1500px; 
    display: block;
    margin-left: auto; 
    margin-right: 0; 
    object-fit: none;
    
}

.photoDeProfil{
    border-radius: 100%;
    width:55%;
    ;
}

.maps{
    border:0; 
    width:100%; 
    height:100vh;
}


.team {
    display : flex;
    padding-right: 13.27%;
}
.logo{
    width:100%;
    max-width:3.16%;
}
span.blockservice{
    display: flex;
    position: relative;
    width: 9.8%;
    height: 155px;
    background-color: #fff5d6; 
}


.container-cinema {
    padding-left: 3.16%;
    background-color : white;
    
}

.distantuno {
    margin-left: 9.41%;
    margin-top: 50px ;
    margin-bottom: 100px ;
    
}
.distantdos {
    margin-left: 15.67%;
    margin-top: 50px ;
    margin-bottom: 25px ;
    
}
.BS {
    font-family: Domine;
    color : black;
}


.ariere1{
    margin-left: 15.67%;
    max-width: 17.75% ;
}


.minLink {
    padding-left: 69.49%;
    color : #FFF;
    margin-bottom: 30px;
}

.big {
    margin-left: 9.41%;
    margin-top: 50px ;
    margin-bottom: 50px
}
.tall {
    margin-left: 9.41%;
    margin-top: 50px ;
    margin-bottom: 50px
}
.entitle {
    height: 100vh; text-align: center;padding-top: 15%;
    color : #FFF;
}
.sectitle {
    height: 50vh; text-align: center; padding-top: 5%;
}
#ecran1, #ecran2, #ecran3, #ecran5, footer {
    color : #FFF;
}

